RESOLVED FIXED235889
Fix GPUP WebGL generator script wrt uninitialised sized span
https://bugs.webkit.org/show_bug.cgi?id=235889
Summary Fix GPUP WebGL generator script wrt uninitialised sized span
Kimmo Kinnunen
Reported 2022-01-31 05:23:36 PST
Fix GPUP WebGL generator script wrt uninitialised sized span Likely generates a dangling reference: IPC::ArrayReference<int32_t, 2> rangeReply { { } };
Attachments
Patch (2.27 KB, patch)
2022-02-22 12:06 PST, Alex Christensen
no flags
Patch (4.88 KB, patch)
2022-02-23 00:44 PST, Kimmo Kinnunen
no flags
Patch (4.92 KB, patch)
2022-02-23 00:47 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-01-31 05:25:34 PST
caused by bug 233931
Radar WebKit Bug Importer
Comment 2 2022-02-07 05:24:19 PST
Alex Christensen
Comment 3 2022-02-22 12:06:09 PST
Alex Christensen
Comment 4 2022-02-22 12:45:15 PST
Kimmo Kinnunen
Comment 5 2022-02-23 00:26:04 PST
Fix GPUP WebGL *generator script* wrt uninitialised sized span
Kimmo Kinnunen
Comment 6 2022-02-23 00:44:52 PST
Kimmo Kinnunen
Comment 7 2022-02-23 00:47:16 PST
EWS
Comment 8 2022-02-23 05:20:55 PST
Committed r290367 (247683@main): <https://commits.webkit.org/247683@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452947 [details].
Note You need to log in before you can comment on or make changes to this bug.