Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxyFunctionsGenerated.cpp
@@ -686,8 +686,8 @@ String RemoteGraphicsContextGLProxy::getShaderInfoLog(PlatformGLObject arg0)
 
 void RemoteGraphicsContextGLProxy::getShaderPrecisionFormat(GCGLenum shaderType, GCGLenum precisionType, GCGLSpan<GCGLint, 2> range, GCGLint* precision)
 {
-    constexpr std::array<int32_t, 2> emptyRangeReply { 0, 0 };
-    IPC::ArrayReference<int32_t, 2> rangeReply { emptyRangeReply };
+    constexpr std::array<int32_t, 2> rangeReplyEmpty { };
+    IPC::ArrayReference<int32_t, 2> rangeReply { rangeReplyEmpty };
     int32_t precisionReply = { };
     if (!isContextLost()) {
         auto sendResult = sendSync(Messages::RemoteGraphicsContextGL::GetShaderPrecisionFormat(shaderType, precisionType), Messages::RemoteGraphicsContextGL::GetShaderPrecisionFormat::Reply(rangeReply, precisionReply));
